kubernetes/apps/photoprism/app/networkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: photoprism-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: photoprism
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: envoy
              gateway.envoyproxy.io/owning-gateway-name: envoy-proxy
      ports:
        - port: 2342
          protocol: TCP
